--- a/Task-2/styles.css
+++ b/Task-2/styles.css
@@ -43,7 +43,7 @@ a {
 
 header {
   display: block;
-  color: green;
+  color: darkgreen;
   background-color: orange;
   font-family: courier, monospace;
   font-style: oblique;
